fixed navbar collapse

--- a/public/scss/login.scss
+++ b/public/scss/login.scss
@@ -1,4 +1,5 @@
 .form-signin {
+  margin-top: 75px;
   .btn-primary {
     border-color: #749CA8;
     background-color: #749CA8;
