--- a/public/scss/style.scss
+++ b/public/scss/style.scss
@@ -47,6 +47,7 @@ $breakpoint-chatbox6: "(min-width: 1450px)";
 
 html, body {
   background: $main-bkgd;
+  min-width: 290px;
 }
 
 #page-content {
